# pymesh

./: .gitignore  LICENSE  README.md  README_PACKAGING.md  build.py  pymesh_start.py  pyproject.toml  requirements.txt
pymesh/: main.py  run_tests.py
pymesh/core/: connector.py  discovery.py  handshake.py  listener.py  node.py  peer.py  protocol.py
pymesh/crypto/: cipher.py  handshake.py  identity.py  trust.py
pymesh/files/: __init__.py  transfer.py
pymesh/messaging/: __init__.py  history.py  typing.py
pymesh/tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
pymesh/ui/: terminal.py  tui.py
pymesh/utils/: constants.py
