[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pymesh-chat"
version = "0.1.0"
description = "Secure peer-to-peer terminal chat and file sharing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "zeroconf>=0.131",
    "cryptography>=42.0",
    "textual>=0.60",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[project.scripts]
pymesh = "pymesh.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymesh*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["pymesh/tests"]
